created sidebar grid layout

--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
 <header></header>
 <main> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam sunt libero, fuga at deleniti et incidunt consequatur delectus adipisci nam, recusandae dolores non soluta ullam officia atque pariatur dicta cumque! </main>
 <div class="sidebar"> 
-ae non possimus. Hic inventore impedit excepturi autem ducimus, laborum facilis! Voluptas.
+<h3> Dashboard </h3>
+<p> Home </p>
+<p> Profile </p>
+<p> Messages </p>
+<p> History </p>
+<p> Tasks </p>
+<p> Communities </p>
+
+<p> Settings </p>
+<p> Support </p>
+<p> Privacy </p>
 </div>
 </div>
 </body>
