created main layout

--- a/index.html
+++ b/index.html
@@ -9,18 +9,53 @@
 <body>
 <div class="wrapper">
 <header></header>
-<main> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam sunt libero, fuga at deleniti et incidunt consequatur delectus adipisci nam, recusandae dolores non soluta ullam officia atque pariatur dicta cumque! </main>
+<main> 
+ <div class="one">
+
+ </div>
+
+ <div class="two">
+
+ </div>
+ <div class="three">
+
+ </div>
+ <div class="four">
+
+ </div>
+ <div class="five">
+
+ </div>
+ <div class="six">
+
+ </div>
+ <div class="seven">
+
+ </div>
+ <div class="eight">
+
+ </div>
+ <div class="nine">
+
+ </div>
+</main>
 <div class="sidebar"> 
 <h3> Dashboard </h3>
-<p> Home </p>
+    <p> Home </p>
 <p> Profile </p>
+
 <p> Messages </p>
+
 <p> History </p>
+
 <p> Tasks </p>
+
 <p> Communities </p>
 
 <p> Settings </p>
+
 <p> Support </p>
+
 <p> Privacy </p>
 </div>
 </div>
