finished projects main layout

--- a/index.html
+++ b/index.html
@@ -11,29 +11,57 @@
 <header></header>
 <main> 
  <div class="one">
-
+   <h4> Project 1 </h4>
+   <p> This was my first Odin Project. It is a recipes page <br> 
+    with 3 recipes, Bluberry Pancakes, French Toast and 
+    vanilla sponge cake. This project was created on 
+    November 16, 2023 </p> 
+   <a href="https://alliyaa.github.io/recipes/"  target="_blank"> Recipes Page </a>
+  
  </div>
 
  <div class="two">
+    <h4> Project 2 </h4>
+    <p> This was my second Odin Project. It is a landing page 
+     for books, kind of like goodreads. It has a favorite 
+     books, to be read, Readers Enjoyed: and qoutes. This 
+     project was created on  November 20, 2023 </p> 
+    <a href="https://alliyaa.github.io/landingpage/" target="_blank"> Landing Page </a>
 
  </div>
  <div class="three">
-
  </div>
- <div class="four">
 
+ <div class="four">
+  <h4> Project 4 </h4> 
+ <p> This is a small project I created when I learnt tables in HTML 
+ to practice. I created my spring semester schedule
+  This project was created on Febuary 1, 2024</p> 
+ <a href= "https://alliyaa.github.io/schedulespring24/" target="_blank"> Schedule Page </a>
  </div>
  <div class="five">
-
+  <h4> Project 3 </h4>
+  <p> This is a recent Odin Project. It is a forms page 
+    that collects your informatuon before signing up.  
+    This project was created on  Febuary 3, 2024 </p> 
+  <a href= "https://alliyaa.github.io/sudukoproj1/" target="_blank"> Suduko Solver </a>
  </div>
  <div class="six">
 
  </div>
  <div class="seven">
-
+  <h4> Project 5 </h4>
+  <p> This is another Odin Project. It is a rock paper scissors
+    game. It's the User vs the Computer. 
+    This project was created on  December 2, 2023 </p> 
+  <a href= "https://alliyaa.github.io/forms/" target="_blank"> Rock Paper Scissors Page </a>
  </div>
  <div class="eight">
-
+  <h4> Project 6 </h4>
+  <p> This is a university project. It is a suduko solver
+   in the Java  language. It takes any suduko problem and
+   outputs the solution. This project was created on October 15, 2023 </p> 
+  <a href= "https://alliyaa.github.io/forms/" target="_blank"> Forms Page </a>
  </div>
  <div class="nine">
 
