created layout for announcements/trending part on main

--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
     <a href="https://alliyaa.github.io/landingpage/" target="_blank"> Landing Page </a>
 
  </div>
- <div class="three">
- </div>
+
 
  <div class="four">
   <h4> Project 4 </h4> 
@@ -46,9 +45,7 @@
     This project was created on  Febuary 3, 2024 </p> 
   <a href= "https://alliyaa.github.io/sudukoproj1/" target="_blank"> Suduko Solver </a>
  </div>
- <div class="six">
 
- </div>
  <div class="seven">
   <h4> Project 5 </h4>
   <p> This is another Odin Project. It is a rock paper scissors
@@ -63,9 +60,16 @@
    outputs the solution. This project was created on October 15, 2023 </p> 
   <a href= "https://alliyaa.github.io/forms/" target="_blank"> Forms Page </a>
  </div>
- <div class="nine">
 
+ <div class="announcements">
+<h4> Announcements</h4>
  </div>
+
+ <div class="trending">
+  <h4> Trending </h4>
+ </div>
+
+
 </main>
 <div class="sidebar"> 
 <h3> Dashboard </h3>
