created search bar

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
 <div class="wrapper">
-<header></header>
+<header>
+  <div class="search">
+
+  </div>
+</header>
 <main> 
  <div class="one">
    <h4> Project 1 </h4>
@@ -62,11 +66,27 @@
  </div>
 
  <div class="announcements">
-<h4> Announcements</h4>
+<h3> Reminders </h3>
+<p>
+  Submit Assignment 1
+</p>
+<p>
+  Meal Prep
+</p>
+<p>
+  Prepare for Interview
+</p>
+<p>
+  Do Laundry
+</p>
  </div>
 
  <div class="trending">
   <h4> Trending </h4>
+  <p> @bookstoday </p>
+  <p> @goodreads28 </p>
+  <p> @storygraph </p>
+  <p> @letterboxd </p>
  </div>
 
 
