created user icon and name

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 <div class="wrapper">
 <header>
   <div class="search">
-
+    <img src="/mg.jpeg" alt="ho">
+  </div>
+  <div class="user">
+    <img src="/usericon.png" alt="">
+  <h2>  BookNerd3 (@dale)</h2>
   </div>
 </header>
 <main> 
