buttons layout and design

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
   <div class="search">
     <img src="/mg.jpeg" alt="ho">
   </div>
+  <div class="buttons">
+  <button> New </button>
+ <button> Upload </button>
+ <button> Share </button>
+  </div>
   <div class="user">
     <img src="/usericon.png" alt="">
   <h2>  BookNerd3 (@dale)</h2>
