--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
     <img src="/usericon.png" alt="">
   <h2>  BookNerd3 (@dale)</h2>
   </div>
+  <div class="notifs">
+    <img src="/ntf.jpg" alt="">
+  <h4>  BookNerd3 (@dale) </h4>
+  </div>
 </header>
 <main> 
  <div class="one">
