fixed a few styling issues

--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
  <div class="one">
    <h4> Project 1 </h4>
    <p> This was my first Odin Project. It is a recipes page <br> 
-    with 3 recipes, Bluberry Pancakes, French Toast and 
-    vanilla sponge cake. This project was created on 
+    with 3 recipes. This project was created on 
     November 16, 2023 </p> 
    <a href="https://alliyaa.github.io/recipes/"  target="_blank"> Recipes Page </a>
   
@@ -40,8 +39,7 @@
  <div class="two">
     <h4> Project 2 </h4>
     <p> This was my second Odin Project. It is a landing page 
-     for books, kind of like goodreads. It has a favorite 
-     books, to be read, Readers Enjoyed: and qoutes. This 
+     for books, kind of like goodreads. This 
      project was created on  November 20, 2023 </p> 
     <a href="https://alliyaa.github.io/landingpage/" target="_blank"> Landing Page </a>
 
@@ -79,7 +77,8 @@
  </div>
 
  <div class="announcements">
-<h3> Reminders </h3>
+
+  <h4> Reminders </h4>
 <p>
   Submit Assignment 1
 </p>
