alt text on images

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="wrapper">
 <header>
   <div class="search">
-    <img src="/mg.jpeg" alt="ho">
+    <img src="/mg.jpeg" alt="can't load image">
   </div>
   <div class="buttons">
   <button> New </button>
@@ -18,11 +18,11 @@
  <button> Share </button>
   </div>
   <div class="user">
-    <img src="/usericon.png" alt="">
+    <img src="/usericon.png" alt="can't load image">
   <h2>  BookNerd3 (@dale)</h2>
   </div>
   <div class="notifs">
-    <img src="/ntf.jpg" alt="">
+    <img src="/ntf.jpg" alt="can't load image">
   <h4>  BookNerd3 (@dale) </h4>
   </div>
 </header>
